[build-system]
requires = [
  "setuptools>=61.0",
  "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["acgc"]
exclude = ["demo"]

[tool.setuptools.package-data]
acgc = [
  "*.mplstyle",
  "fonts/*.otf"]

[project]
name = "acgc"
dynamic = ["version"] # Version number will be discovered from git tags by setuptools_scm
authors = [
  { name="Christopher Holmes", email="cdholmes@fsu.edu" },
]
maintainers = [
  { name="Christopher Holmes", email="cdholmes@fsu.edu" },
]
description = "A collection of data analysis programs used by the Atmospheric Chemistry and Global Change (ACGC) research group"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dependencies = [
    "matplotlib",
    "matplotlib_inline",
    "cartopy",
    "numpy",
    "scipy",
    "pandas",
    "netCDF4",
    "scikit-learn",
    "statsmodels"
    #"numba"
    #"rpy2",
]

[project.urls]
Homepage = "https://github.com/cdholmes/pylib"
Repository = "https://github.com/cdholmes/pylib"
Issues = "https://github.com/cdholmes/pylib/issues"

